--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "e-commerce-backend",
   "version": "1.0.0",
-  "description": "Sao Design API",
-  "main": "app.js",
+  "description": "E-commerce backend",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles",
+    "test-watch": "jest --watch",
+    "watch": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
-  "author": "Oluwadurotimi",
+  "author": "Oluwadurotimi Oladapo",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
