--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
     "start": "node src/server.js",
-    "cluster": "pm2 start src/server.js -i max"
+    "cluster": "pm2 start src/server.js -i max",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:start:prod": "pm2 start ecosystem.config.js --env production",
+    "pm2:start:dev": "pm2 start ecosystem.config.js --env development",
+    "pm2:reload": "pm2 reload ecosystem.config.js",
+    "pm2:reload:prod": "pm2 reload ecosystem.config.js --env production",
+    "pm2:reload:dev": "pm2 reload ecosystem.config.js --env development"
   },
   "author": "Oluwadurotimi Oladapo",
   "license": "ISC",
