--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max",
     "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop ecosystem.config.js",
     "pm2:start:prod": "pm2 start ecosystem.config.js --env production",
     "pm2:start:dev": "pm2 start ecosystem.config.js --env development",
     "pm2:reload": "pm2 reload ecosystem.config.js",
