--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -14,6 +14,14 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm' # Cache npm dependencies for faster runs
+    - name: MongoDB in GitHub Actions
+      uses: supercharge/mongodb-github-action@1.12.0
+      with:
+        mongodb-version: '6.0.5' # Specify the MongoDB version you want to use
+        mongodb-port: 27017 # Default MongoDB port
+        mongodb-username: ${{ secrets.MONGO_USERNAME }} # Use GitHub Secrets for sensitive data
+        mongodb-password: ${{ secrets.MONGO_PASSWORD }}
+        mongodb-database: ${{ secrets.MONGO_DATABASE }} # Use GitHub Secrets for sensitive data
     - name: Install dependencies
       run: npm install
     - name: Run tests
@@ -22,6 +30,12 @@ jobs:
         # Add environment variables if needed
         MONGO_URI: ${{ secrets.MONGO_URI }}
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+        ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+        DATABASE_URI: ${{ secrets.DATABASE_URI }}
+        SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
     # Remove build step if not needed
     # - name: Build project
     #   run: npm run build
