--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,39 +5,26 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=production
-      - MONGO_URI=${MONGO_URI} # Pass MongoDB URI via .env
-    ports:
-      - "8000:8000" # Optional: Expose for debugging
-    depends_on:
-      - mongo
+    env_file:
+      - .env # Load all variables from .env
+    volumes:
+      - ./src/logs:/app/src/logs
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     networks:
       - app-network
 
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "8000:80" # Map host port 8000 to nginx's default port 80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - node-app
     networks:
       - app-network
-
-  mongo:
-    image: mongo:latest
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
-    volumes:
-      - mongo-data:/data/db
-    networks:
-      - app-network
-
-volumes:
-  mongo-data:
 
 networks:
   app-network:
