--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,32 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: node-app
     env_file:
       - .env # Load all variables from .env
     volumes:
       - ./src/logs:/app/src/logs
+    ports:
+      - "8000:8000" # Map host port 8000 to container port 8000 (used by ecosystem.config.js)
     dns:
       - 8.8.8.8
       - 8.8.4.4
     networks:
       - app-network
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
+    container_name: nginx
     ports:
-      - "8000:80" # Map host port 8000 to nginx's default port 80
+      - "80:80" # Map host port 80 to nginx's default port 80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - node-app
     networks:
       - app-network
+    restart: unless-stopped
 
 networks:
   app-network:
