--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
 
+    client_max_body_size 10M; # Increase max body size for uploads (adjust as needed)
+    client_body_buffer_size 128k; # Increase buffer size to reduce disk writes
+
     location / {
         proxy_pass http://node-app:8000; # Points to Node.js container
         proxy_set_header Host $host;
